[package]
name = "dog-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tokio = { version = "1.20.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.139"
serde_json = "1.0.82"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"